--- a/package.json
+++ b/package.json
@@ -16,15 +16,17 @@
     "dependencies": {
         "@monaco-editor/react": "^4.6.0",
         "mustache": "^4.2.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
         "react-scripts": "5.0.1"
     },
     "devDependencies": {
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^14.5.2",
         "cypress": "^12.17.1",
+        "jest": "^27.5.1",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
         "web-vitals": "^3.1.4"
     },
     "browserslist": {
